add out/ to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /out/production/AOOP_Project/Database.class
 /out/production/AOOP_Project/InventoryFrame.class
 /out/production/AOOP_Project/Main.class
+out/
